test/parser/else-no-brace.delta
// RUN: not %delta -parse %s | %FileCheck %s

func main() -> int {
    if (true) {
        return 1;
    } else
        return 0; // CHECK: [[@LINE]]:9: error: expected '{' or 'if', got 'return'
}
